--- a/src/main/resources/application-shared.properties
+++ b/src/main/resources/application-shared.properties
@@ -44,4 +44,4 @@ pn.commons.wire-tap-activation=${WIRE_TAP_LOG:false}
 ###ECS Container info
 pn.ecs.uri = ${ECS_AGENT_URI:http://address/api/local}
 pn.analyzer.cloudwatch-metric-cron=${PN_CRON_ANALYZER:-}
-pn.analyzer.params= ${PN_ANALYZER_VALUES_ACTUATOR:}
+pn.analyzer.params= ${PN_ANALYZER_VALUES_ACTUATOR:jvm.threads.live,jvm.memory.used,executor.queued}
