--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 
 		<!--LOCALSTACK/TESTCONTAINERS-->
 		<dependency>
