--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>pn-commons</artifactId>
-	<version>2.12.0-SNAPSHOT</version>
+	<version>2.12.1-SNAPSHOT</version>
 	<name>pn-commons</name>
 	<description>Pn Common Utilities</description>
 	<scm>
@@ -85,6 +85,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.janino</groupId>
+			<artifactId>janino</artifactId>
+			<version>3.1.12</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
