--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>it.pagopa.pn</groupId>
 		<artifactId>pn-parent</artifactId>
-		<version>2.1.2-SPRINGBOOT3</version>
+		<version>2.1.2-SPRINGBOOT3-STARTER</version>
 		<relativePath>../pn-parent</relativePath>
 	</parent>
 
 	<artifactId>pn-commons</artifactId>
-	<version>2.12.1-SPRINGBOOT3</version>
+	<version>2.12.1-SPRINGBOOT3-STARTER</version>
 	<name>pn-commons</name>
 	<description>Pn Common Utilities</description>
 	<scm>
@@ -139,6 +139,18 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>3.2.5</version>
+				<executions>
+					<execution>
+						<id>repackage</id>
+						<phase>none</phase>
+					</execution>
+				</executions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
