--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>it.pagopa.pn</groupId>
 		<artifactId>pn-parent</artifactId>
-		<version>2.1.2-SPRINGBOOT3-STARTER</version>
+		<version>2.1.2-SPRINGBOOT3-NATIVE</version>
 		<relativePath>../pn-parent</relativePath>
 	</parent>
 
