--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>it.pagopa.pn</groupId>
 		<artifactId>pn-parent</artifactId>
-		<version>2.1.3-SPRINGBOOT3-SNAPSHOT</version>
+		<version>2.1.3-SPRINGBOOT3</version>
 		<relativePath>../pn-parent</relativePath>
 	</parent>
 
 	<artifactId>pn-commons</artifactId>
-	<version>2.14.1-SPRINGBOOT3-SNAPSHOT</version>
+	<version>2.14.0-SPRINGBOOT3</version>
 	<name>pn-commons</name>
 	<description>Pn Common Utilities</description>
 	<scm>
